[package]
name = "cute-alarm"
version = "1.0.0"
description = "A cute cartoon alarm clock for Windows"
authors = ["BTCUP99"]
edition = "2021"

[lib]
name = "cute_alarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
